Added interceptor for muted users and a couple of schedule event