@@ -2,8 +2,6 @@ package com.example.archvizarena.service;
 
 import com.example.archvizarena.model.binding.PenaltyAddBindingModel;
 import com.example.archvizarena.model.entity.*;
-import com.example.archvizarena.model.entity.enums.PenaltyTypeEnum;
-import com.example.archvizarena.model.entity.enums.UserOccupationEnum;
 import com.example.archvizarena.repository.PenaltyRepository;
 import com.example.archvizarena.repository.ReportRepository;
 import com.example.archvizarena.repository.UserRepository;
@@ -13,20 +11,24 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
 public class PenaltyServiceImpl implements PenaltyService {
 
     private final ReportRepository reportRepository;
+
+    private final ReportService reportService;
     private final PenaltyRepository penaltyRepository;
     private final ProjectService projectService;
     private final JobService jobService;
     private final UserRepository userRepository;
 
 
-    public PenaltyServiceImpl(ReportRepository reportRepository, PenaltyRepository penaltyRepository, ProjectService projectService, JobService jobService, UserRepository userRepository) {
+    public PenaltyServiceImpl(ReportRepository reportRepository, ReportService reportService, PenaltyRepository penaltyRepository, ProjectService projectService, JobService jobService, UserRepository userRepository) {
         this.reportRepository = reportRepository;
+        this.reportService = reportService;
         this.penaltyRepository = penaltyRepository;
         this.projectService = projectService;
         this.jobService = jobService;
@@ -41,10 +43,17 @@ public class PenaltyServiceImpl implements PenaltyService {
                 .orElseThrow(() -> new ObjectNotFoundException("The report you are looking for does not exist!"));
 
         UserEntity reportedUser = reportEntity.getReportedUser();
+        if (reportedUser.isMuted()) {
+            throw new IllegalStateException("The user is already sanctioned!");
+        }
         PortfolioProjectEntity reportedProject = reportEntity.getReportedProject();
-        List<Long> reportsToBeDeleted = reportRepository.findAllByReportedUser_Id(reportedUser.getId()).stream().map(BaseEntity::getId).collect(Collectors.toList());
-
-        reportRepository.deleteAllById(reportsToBeDeleted);
+        List<Long> reportsToBeDeleted = reportRepository.findAllByReportedUser_Id(reportedUser.getId())
+                .stream()
+                .map(BaseEntity::getId)
+                .toList();
+        for (Long aLong : reportsToBeDeleted) {
+            reportService.deleteById(aLong);
+        }
 
         if (reportedProject != null) {
             projectService.deleteProject(reportedProject.getId());
@@ -68,5 +77,20 @@ public class PenaltyServiceImpl implements PenaltyService {
 
         userRepository.save(reportedUser);
         penaltyRepository.save(penaltyEntity);
+    }
+
+    @Override
+    @Transactional
+    public void unmuteUsersWithExpiredMute() {
+        penaltyRepository.findAll().forEach(penalty -> {
+                    if (penalty.getEndDate().isBefore(LocalDateTime.now())) {
+                        UserEntity user = userRepository.findById(penalty.getPenalizedUser().getId())
+                                .orElseThrow(() -> new ObjectNotFoundException("The user you are looking for does not exist"));
+                        user.setMuted(false);
+                        userRepository.save(user);
+                        penaltyRepository.delete(penalty);
+                    }
+                }
+        );
     }
 }
